--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -23,8 +23,8 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_marginTop="@dimen/dimens_20dp"
+            android:orientation="horizontal"
             android:padding="10dp">
 
 
@@ -50,11 +50,11 @@
                 android:background="@drawable/selector_to_camera" />
 
             <ImageView
-                android:layout_below="@id/menu_home_setting_iv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_below="@id/menu_home_setting_iv"
                 android:layout_centerHorizontal="true"
+                android:layout_marginTop="20dp"
                 android:src="@drawable/img_index_logo" />
 
         </RelativeLayout>
@@ -70,6 +70,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="10dp">
+
 
                 <Button
                     android:id="@+id/menu_home_material_btn"
@@ -91,9 +92,19 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="0dp"
                     android:layout_marginTop="0dp"
-                    android:visibility="gone"
-                    android:src="@drawable/home_tips_new" />
+                    android:src="@drawable/home_tips_new"
+                    android:visibility="gone" />
+
+                <View
+                    android:id="@+id/red_dot"
+                    android:layout_width="8dp"
+                    android:layout_height="8dp"
+                    android:layout_alignRight="@+id/menu_home_material_btn"
+                    android:background="@drawable/red_dot_shape"
+                    android:visibility="visible" />
+
             </RelativeLayout>
+
 
             <RelativeLayout
                 android:layout_width="wrap_content"
@@ -105,8 +116,7 @@
                     android:id="@+id/menu_home_camera_btn"
                     android:layout_width="88dp"
                     android:layout_height="88dp"
-                    android:src="@drawable/img_index_05_176"
-                     />
+                    android:src="@drawable/img_index_05_176" />
 
                 <TextView
                     android:id="@+id/name_tv"
@@ -182,8 +192,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:layout_gravity="center_horizontal">
+            android:layout_gravity="center_horizontal"
+            android:visibility="gone">
 
             <RelativeLayout
                 android:layout_width="wrap_content"
@@ -240,9 +250,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:layout_marginBottom="@dimen/dimens_20dp"
+        android:gravity="center_vertical"
         android:paddingLeft="@dimen/dimens_20dp"
-        android:visibility="visible"
-        android:gravity="center_vertical">
+        android:visibility="visible">
 
         <com.sunnybear.library.view.image.ImageDraweeView
             android:id="@+id/iv_header_icon"
@@ -253,20 +263,20 @@
             android:layout_centerVertical="true"
             auto:placeholderImage="@drawable/img_head_signup" />
 
-      <!--  <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="centerInside"
-            android:src="@drawable/img_head_signup"/>-->
+        <!--  <ImageView
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:scaleType="centerInside"
+              android:src="@drawable/img_head_signup"/>-->
 
         <TextView
             android:id="@+id/user_name_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:textSize="18sp"
+            android:text="登录葡萄账户"
             android:textColor="#e75c5c"
-            android:text="登录葡萄账户"/>
+            android:textSize="18sp" />
 
     </LinearLayout>
 
