--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -85,7 +85,7 @@
                     android:layout_centerHorizontal="true"
                     android:text="素材中心"
                     android:textColor="@color/text_color_dark_626262"
-                    android:textSize="@dimen/dimens_16dp"></TextView>
+                    android:textSize="@dimen/dimens_16dp"/>
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -96,12 +96,12 @@
                     android:visibility="gone" />
 
                 <View
-                    android:id="@+id/red_dot"
+                    android:id="@+id/v_red_dot"
                     android:layout_width="8dp"
                     android:layout_height="8dp"
                     android:layout_alignRight="@+id/menu_home_material_btn"
                     android:background="@drawable/red_dot_shape"
-                    android:visibility="visible" />
+                    android:visibility="gone" />
 
             </RelativeLayout>
 
