--- a/app/src/main/res/layout/fragment_water_mark_category_management.xml
+++ b/app/src/main/res/layout/fragment_water_mark_category_management.xml
@@ -22,6 +22,6 @@
         android:stretchMode="columnWidth"
         android:verticalSpacing="10dp"
         ptr:ptrDrawable="@drawable/default_ptr_rotate"
-        ptr:ptrMode="disabled" />
+        ptr:ptrMode="pullUpFromBottom" />
 
 </LinearLayout>
