--- a/app/src/main/res/layout/fragment_dynamic_management.xml
+++ b/app/src/main/res/layout/fragment_dynamic_management.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -25,5 +25,27 @@
         android:verticalSpacing="10dp"
         ptr:ptrDrawable="@drawable/default_ptr_rotate"
         ptr:ptrMode="disabled" />
+    ptr:ptrMode="pullUpFromBottom" />
+    <RelativeLayout
+        android:id="@+id/rl_empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:visibility="gone"
+        >
+        <ImageView
+            android:layout_centerInParent="true"
+            android:id="@+id/iv_empty"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/img_page_empty"/>
+        <TextView
+            android:layout_marginTop="20dp"
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="空空如也"
+            android:layout_below="@id/iv_empty"/>
+    </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
