--- a/app/src/main/res/layout/activity_photo_editor_dynamic.xml
+++ b/app/src/main/res/layout/activity_photo_editor_dynamic.xml
@@ -2,7 +2,7 @@
     xmlns:auto="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/color_c8c7c5"
+    android:background="@color/black"
     android:orientation="vertical">
 
 
