--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -3,8 +3,14 @@
     android:id="@+id/fl_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/img_index_bg"
     android:orientation="vertical">
+    <ImageView
+        android:id="@+id/iv_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:src="@drawable/img_index_bg"
+        />
 
     <!--<com.putao.widget.gif.GifView-->
     <!--android:id="@+id/longzhou_gif"-->
