--- a/app/src/main/res/layout/layout_management_water_mark_grid_item.xml
+++ b/app/src/main/res/layout/layout_management_water_mark_grid_item.xml
@@ -8,7 +8,7 @@
 
     <RelativeLayout
         android:layout_width="165dp"
-        android:layout_height="165dp">
+        android:layout_height="175dp">
 
         <!--<com.putao.camera.editor.view.FilterEffectThumbnailView
             android:id="@+id/water_mark_photo_download_iv"
@@ -67,13 +67,14 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_marginLeft="@dimen/dimens_10dp">
 
         <TextView
             android:id="@+id/water_mark_category_count_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
             android:layout_margin="1dp"
             android:text="0枚"
             android:textColor="@color/text_color_dark_898989" />
@@ -83,6 +84,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="1dp"
+            android:layout_alignParentBottom="true"
             android:layout_toRightOf="@+id/water_mark_category_count_tv"
             android:text="0k"
             android:textColor="@color/text_color_dark_898989" />
@@ -92,8 +94,8 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_alignParentRight="true"
-            android:paddingBottom="10dp"
             android:paddingRight="10dp"
+            android:layout_alignParentBottom="true"
             android:src="@drawable/btn_22_01"
             android:visibility="visible" />
 
@@ -102,18 +104,13 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_alignParentRight="true"
-            android:paddingBottom="10dp"
+            android:layout_alignParentBottom="true"
             android:paddingRight="10dp"
             android:src="@drawable/btn_22_02"
             android:visibility="gone" />
 
     </RelativeLayout>
 
-    <!--style="@style/button.red"-->
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/background" />
 
     <LinearLayout
         android:layout_width="match_parent"
