--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,13 +5,13 @@
     android:layout_height="match_parent"
     android:background="@drawable/img_bg_signup"
     android:orientation="vertical">
-
+    <!--auto:nav_left_title_color="@drawable/text_select"-->
     <!--标题栏-->
     <com.sunnybear.library.view.NavigationBar
         style="@style/style_navigation_bar"
         android:background="@color/transparent"
         auto:nav_left_title="@string/cancel"
-        auto:nav_left_title_color="@drawable/text_select"
+        auto:nav_left_title_color="#ff5859"
         auto:nav_main_title="@string/login_title"
         auto:nav_main_title_color="@color/text_color" />
 
@@ -131,12 +131,14 @@
             <!--注册新用户-->
             <TextView
                 android:id="@+id/tv_register"
+                android:textColor="#ff5859"
                 style="@style/style_login_text"
                 android:layout_alignParentLeft="true"
                 android:text="@string/reg_user" />
 
             <!--忘记密码-->
             <TextView
+                android:textColor="#ff5859"
                 android:id="@+id/tv_forget"
                 style="@style/style_login_text"
                 android:layout_alignParentRight="true"
